<resources>

    <string name="app_name">Nsoll Server Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_login">Login</string>
    <string name="title_activity_main">Nsoll Server Monitor</string>
    <string name="server_list">Server List</string>
    <string name="manager_list">Manager List</string>
    <string name="monitor_log">Monitor Log</string>
    <string name="alert_log">Alert Log</string>
    <string name="server_set">Server Set</string>
    <string name="save">Save</string>
    <string name="manager_set">Manager Set</string>
    <string name="login">LOGIN</string>
    <string name="managerid">Manager ID : </string>
    <string name="password">Password : </string>
    <string name="domain">http://smt.nsoll.com</string>
    <string name="menu_logout">Logout</string>
    <string name="logout_msg">NSOLL Server Monitor를 종료하시겠습니까?</string>
    <string name="button_yes">예</string>
    <string name="button_no">아니오</string>

</resources>