<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="top"
	android:orientation="vertical">
	<Button
		android:id="@+id/serverList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="64dip"
		android:text="@string/server_list" />
	<Button
		android:id="@+id/managerList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="64dip"
		android:text="@string/manager_list" />
	<Button
		android:id="@+id/monitorLog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="64dip"
		android:text="@string/monitor_log" />
	<Button
		android:id="@+id/alertLog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="64dip"
		android:text="@string/alert_log" />
</LinearLayout>